--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,13 @@ img {
   border: 2px solid green;
 }
 
+p {
+
+  margin-left: 10px;
+}
+
+
+
 .gifDiv{
   margin: 10px;
   width: 200px;
@@ -34,7 +41,7 @@ img {
 }
 
 
-#flowerInput {
+#muscianInput {
    border-top: 1px solid #96d1f8;
    background: #65a9d7;
    background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
@@ -51,14 +58,15 @@ img {
    box-shadow: rgba(0,0,0,1) 0 1px 0;
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: white;
-   font-size: 24px;
+   font-size: 18px;
    font-family: Georgia, serif;
    text-decoration: none;
    vertical-align: middle;
+   margin-left: 75px;
    }
 
 
-#flowerForm {
+#muscianForm {
    border-top: 1px solid #96d1f8;
    background: #65a9d7;
    background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
@@ -76,14 +84,14 @@ img {
    text-shadow: rgba(0,0,0,.4) 0 1px 0;
    color: black;
    background-color: white;
-   font-size: 24px;
+   font-size: 20px;
    font-family: Georgia, serif;
    text-decoration: none;
    vertical-align: middle;
    }
 
 
-.flowerButton {
+.muscianButton {
    border-top: 1px solid #96d1f8;
    background: #65a9d7;
    background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
@@ -118,7 +126,7 @@ img {
     width: 150px;
     height: 10px;
 }
-#addFlower {
+#addmuscian {
    border-top: 1px solid #96d1f8;
    background: #65a9d7;
    background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
@@ -153,4 +161,46 @@ img {
 .wide-btn {
     width: 150px;
     height: 10px;
+}
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    margin-left: 10%;
+    margin-top: 15%;
+    width: 10%; /* Full width */
+    height: 21%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: black;
+    margin: 30% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: black;
+/*    float: right; */
+    margin-right: 5px;
+    margin-top: 0px;
+    padding-top: 0px;
+ /*   position: absolute; */
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
